--- a/gcc-x64/Dockerfile
+++ b/gcc-x64/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:focal
+FROM ubuntu:hirsute
 
 LABEL maintainer="i4stubs@lists.cs.fau.de"
 
@@ -9,7 +9,7 @@ ENV CXX g++-10
 
 LABEL org.label-schema.schema-version="1.0"
 LABEL org.label-schema.name="stubs/gcc-x64"
-LABEL org.label-schema.description="Build x64 StuBS with GCC (7-10)"
+LABEL org.label-schema.description="Build x64 StuBS with GCC (7-11)"
 LABEL org.label-schema.url="https://www4.cs.fau.de/Lehre/WS/V_BS/"
 LABEL org.label-schema.vcs-url="https://github.com/i4/stubs-docker"
 LABEL org.label-schema.vendor="Friedrich-Alexander-Universität Erlangen-Nürnberg / Lehrstuhl für Informatik 4"
@@ -21,5 +21,6 @@ RUN apt-get update \
                        gcc-8 g++-8 \
                        gcc-9 g++-9 \
                        gcc-10 g++-10 \
+                       gcc-11 g++-11 \
  && update-alternatives --install /usr/bin/cc cc /usr/bin/gcc-10 100 \
  && update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++-10 100
