--- a/gcc-old-x86/Dockerfile
+++ b/gcc-old-x86/Dockerfile
@@ -1,15 +1,15 @@
-FROM ubuntu:jammy
+FROM ubuntu:focal
 
 LABEL maintainer="i4stubs@lists.cs.fau.de"
 
 ENV DEBIAN_FRONTEND noninteractive
-ENV ARCH x64
+ENV ARCH x86
 ENV CC gcc-10
 ENV CXX g++-10
 
 LABEL org.label-schema.schema-version="1.0"
-LABEL org.label-schema.name="stubs/gcc-x64"
-LABEL org.label-schema.description="Build x64 StuBS with GCC (9-12)"
+LABEL org.label-schema.name="stubs/gcc-old-x86"
+LABEL org.label-schema.description="Build x86 StuBS with GCC (7-10)"
 LABEL org.label-schema.url="https://sys.cs.fau.de/lehre/ws/bs/"
 LABEL org.label-schema.vcs-url="https://github.com/i4/stubs-docker"
 LABEL org.label-schema.vendor="Friedrich-Alexander-Universität Erlangen-Nürnberg / Lehrstuhl für Informatik 4"
@@ -17,9 +17,10 @@ LABEL org.label-schema.vendor="Friedrich-Alexander-Universität Erlangen-Nürnbe
 RUN apt-get update \
  && apt-get install -y apt-transport-https ca-certificates \
                        build-essential nasm file \
-                       gcc-9 g++-9 \
-                       gcc-10 g++-10 \
-                       gcc-11 g++-11 \
-                       gcc-12 g++-12 \
+                       gcc-7 g++-7 lib32gcc-7-dev lib32stdc++-7-dev \
+                       gcc-8 g++-8 lib32gcc-8-dev lib32stdc++-8-dev \
+                       gcc-9 g++-9 lib32gcc-9-dev lib32stdc++-9-dev \
+                       gcc-10 g++-10 lib32gcc-10-dev lib32stdc++-10-dev \
+                       gcc-multilib g++-multilib libc6-dev-i386 \
  && update-alternatives --install /usr/bin/cc cc /usr/bin/gcc-10 100 \
  && update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++-10 100
