--- a/clang-x86/Dockerfile
+++ b/clang-x86/Dockerfile
@@ -10,7 +10,7 @@ ENV CXX clang++-11
 LABEL org.label-schema.schema-version="1.0"
 LABEL org.label-schema.name="stubs/clang-x86"
 LABEL org.label-schema.description="Build x86 StuBS with LLVM/Clang (11-14)"
-LABEL org.label-schema.url="https://www4.cs.fau.de/Lehre/WS/V_BS/"
+LABEL org.label-schema.url="https://sys.cs.fau.de/lehre/ws/bs/"
 LABEL org.label-schema.vcs-url="https://github.com/i4/stubs-docker"
 LABEL org.label-schema.vendor="Friedrich-Alexander-Universität Erlangen-Nürnberg / Lehrstuhl für Informatik 4"
 
