--- a/cpplint/Dockerfile
+++ b/cpplint/Dockerfile
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND noninteractive
 LABEL org.label-schema.schema-version="1.0"
 LABEL org.label-schema.name="stubs/cpplint"
 LABEL org.label-schema.description="Lint StuBS Source"
-LABEL org.label-schema.url="https://www4.cs.fau.de/Lehre/WS/V_BS/"
+LABEL org.label-schema.url="https://sys.cs.fau.de/lehre/ws/bs/"
 LABEL org.label-schema.vcs-url="https://github.com/i4/stubs-docker"
 LABEL org.label-schema.vendor="Friedrich-Alexander-Universität Erlangen-Nürnberg / Lehrstuhl für Informatik 4"
 
